--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.19.5
+numpy==1.26.4
 opencv-python==4.5.5.64
 transformers==4.16.2
 diffusers==0.2.4
 tqdm==4.64.0
-openvino==2022.3.0
-huggingface_hub==0.9.0
+openvino==2023.3.0
+huggingface-hub 0.21.1
 scipy==1.9.0
 streamlit==1.12.0
 watchdog==2.1.9
